// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package privacy_sandbox.server_common.metric;

message ServerConfig {
  enum TelemetryMode {
    UNKNOWN_TYPE = 0;

    // No metric or trace.
    OFF = 1;

    // Enable metrics. `Privacy::kImpacting` metrics must be noised.
    PROD = 2;

    // Same as PROD in prod build;
    // In experiment build, enable trace, enable metrics without noise.
    EXPERIMENT = 3;

    // Same as PROD in prod build;
    // In experiment build, enable trace, enable metric without noise, and output
    // duplicate `Privacy::kImpacting` metrics with noised.
    COMPARE = 4;
  }
  TelemetryMode mode = 1;

  // If non-empty, only output these metrics in both here and default list.
  // If empty, the default list of metrics is used.
  repeated MetricConfig metric = 2;
}

message MetricConfig {
  string name = 1;
}
